# pyddock

./: .gitignore  README.md  pyproject.toml
src/pyddock/: __init__.py  _audit_enforcement.py  _base.py  _enforcement.py  _fs_enforcement.py  _gitpython_patch.py  _import_hook.py  _library_guards.py  _prewarm.py  _process_utils.py  _proxies.py  _runtime.py  _subprocess_patch.py  ast_validator.py  cli.py  config.py  default_config.toml  executor.py  script_registry.py  server.py  shell_executor.py  venv_manager.py
src/pyddock/tools/: __init__.py  fs_append.py  fs_delete.py  fs_find.py  fs_grep.py  read_file.py  stat_file.py  str_replace.py
tests/: _config_helpers.py  test_ast_properties.py  test_attr_reflection_hardening.py  test_audit_hook_backstop.py  test_chmod_integration.py  test_config.py  test_deny_always_wins.py  test_deny_messages.py  test_env_policy.py  test_executor.py  test_file_tools.py  test_filesystem_guards.py  test_gitpython_enforcement.py  test_jailbreak_regression.py  test_proxy_properties.py  test_realistic.py  test_runtime.py  test_sandbox_escape_hardening.py  test_security_guards.py  test_server.py  test_shell_arg_paths.py  test_shell_executor.py  test_shell_properties.py  test_subprocess_enforcement.py  test_subprocess_properties.py  test_subst_trusted_path.py  test_trusted_prefixes_uv_cache.py  test_venv_stamp.py  test_workspace_imports.py
